--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="cover item-a">
                             <h1>github</h1>
                             <div class="card-back">
-                                <a href="https://github.com/EricsonBreno">github.com>ercsnn</a>
+                                <a href="https://github.com/3rcsn">github.com>ercsnn</a>
                             </div>
                         </div>
                     </div>
